styles.css
body {
  display: flex;
  flex-direction: column;
  margin: 0;
  font-family: Roboto, sans-serif;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 15vw;
  background-color: #1f2937;
}

.header-logo {
  font-size: 24px;
  color: #f9faf8;
}

.header-links {
  font-size: 18px;
}

.header-links ul {
  display: flex;
  gap: 2rem;
  margin: 0;
  padding: 0;
  list-style: none;
}

.header-links a {
  text-decoration: none;
  color: #e5e7eb
}

.hero {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 100px 15vw;
  background-color: #1f2937;
}

.hero-text {
  width: 40%;
}

.hero-main-text {
  font-size: 48px;
  font-weight: 900;
  color: #f9faf8;
}

.hero-sub-text {
  font-size: 18px;
  color: #e5e7eb
}

.hero-text button {
  margin-top: .5rem;
  border: 0;
  border-radius: 8px;
  padding: 8px 32px;
  font-size: 18px;
  font-weight: 900;
  color: #f9faf8;
  background-color: #3882f6;
}

.hero-image {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 300px;
  width: 50%;
  color: white;
  background-color: gray;
}

.info {
  padding: 0 15vw 100px 15vw;
}

.info-title {
  margin: 40px;
  font-size: 36px;
  font-weight: 900;
  text-align: center;
  color: #1f2937
}

.info-card-container {
  display: flex;
  justify-content: space-between;
}

.info-card {
  flex: 0 0 0
}

.card-image {
  border: 5px solid #3882f6;
  border-radius: 10%;
  min-height: 180px;
  min-width: 180px;
}

.card-text {
  text-align: center;
  color: dimgray;
}

.message {
  padding: 100px 25vw;
  background-color: #e5e7eb;
}

.message-quote {
  font-size: 36px;
  font-weight: light;
  font-style: italic;
  color: #1f2937
}

.message-name {
  font-size: 24px;
  font-weight: 900;
  text-align: right;
  color: #1f2937
}

